--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,12 +7,11 @@ body {
   @apply bg-slate-100;
 }
 
-/* Hide scrollbar but keep scroll functionality */
 .no-scrollbar {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none;    /* Firefox */
+  -ms-overflow-style: none; 
+  scrollbar-width: none;    
 }
 
 .no-scrollbar::-webkit-scrollbar {
-  display: none;            /* Chrome, Safari, Opera */
+  display: none;            
 }
